# vector-llm-compressor

./: .gitignore  README.md  main.py  pyproject.toml  ruff.toml
docs/: README.md  quantization.md
src/: qtest.py  quantize.py  utils.py
src/calibration_datasets/: __init__.py  auto.py  base.py  registry.py  ultrachat_200k.py
src/models/: __init__.py  auto.py  base.py  registry.py
src/quantizers/: __init__.py  base.py  llmc_w8a8int8.py  llmcompressor_recipe.py  registry.py
