[project]
name = "vector-llm-compressor"
version = "0.1.0"
description = "Pipeline for quantizing/compressing LLM's"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.0.0",
    "llmcompressor>=0.6.0.1",
    "transformers>=4.52.4",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
]

[tool.pyright]
include = ["src"]
exclude = [
    "**/__pycache__"
]